--- a/Day2Assignment/2Assigment.html
+++ b/Day2Assignment/2Assigment.html
@@ -40,7 +40,8 @@
         <input type="checkbox" id="Javascript" name="skills2" value="JS">
         <label for="Javascript">Javascript</label><br>
         <label for="aboutyou" >About You</label><br>
-        <textarea id="aboutyou" name="message" rows="5" cols="30" placeholder="enter text"></textarea>
+        <textarea id="aboutyou" name="message" rows="5" cols="30" placeholder="enter text"></textarea><br>
+        <button class="button1">Submit</button>
 
 
     </div>
